# qmlkonsole

./: .flatpak-manifest.json  .flatpak-manifest.json.license  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.mobile.qmlkonsole.appdata.xml  org.kde.mobile.qmlkonsole.desktop  org.kde.mobile.qmlkonsole.json  org.kde.qmlkonsole.appdata.xml  org.kde.qmlkonsole.desktop  org.kde.qmlkonsole.json
.reuse/: dep5
lib/: BlockArray.cpp  BlockArray.h  CMakeLists.txt  Character.h  CharacterColor.h  ColorScheme.cpp  ColorScheme.h  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  History.cpp  History.h  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  KeyboardTranslator.h  KonsoleQML.cpp  KonsoleQML.h  LineFont.h  ProcessInfo.cpp  ProcessInfo.h  Pty.cpp  Pty.h  Screen.cpp  Screen.h  ScreenWindow.cpp  ScreenWindow.h  Session.cpp  Session.h  ShellCommand.cpp  TerminalCharacterDecoder.cpp  TerminalCharacterDecoder.h  TerminalDisplay.cpp  TerminalDisplay.h  TerminalSession.cpp  TerminalSession.h  Vt102Emulation.cpp  Vt102Emulation.h  konsole_wcwidth.h  (+5 more)
lib/color-schemes/: cool-retro-term.colorscheme
lib/kb-layouts/historic/: vt100.keytab.license
po/ar/: qmlkonsole.po
po/ast/: qmlkonsole.po
po/ca/: qmlkonsole.po
po/ca@valencia/: qmlkonsole.po
po/cs/: qmlkonsole.po
po/de/: qmlkonsole.po
po/en_GB/: qmlkonsole.po
po/eo/: qmlkonsole.po
po/es/: qmlkonsole.po
po/eu/: qmlkonsole.po
po/fi/: qmlkonsole.po
po/fr/: qmlkonsole.po
po/ga/: qmlkonsole.po
po/gl/: qmlkonsole.po
po/he/: qmlkonsole.po
po/hi/: qmlkonsole.po
po/hu/: qmlkonsole.po
po/ia/: qmlkonsole.po
po/it/: qmlkonsole.po
po/ja/: qmlkonsole.po
po/ka/: qmlkonsole.po
po/ko/: qmlkonsole.po
po/lt/: qmlkonsole.po
po/nl/: qmlkonsole.po
po/nn/: qmlkonsole.po
po/pa/: qmlkonsole.po
po/pl/: qmlkonsole.po
po/pt/: qmlkonsole.po
po/pt_BR/: qmlkonsole.po
po/ro/: qmlkonsole.po
po/ru/: qmlkonsole.po
po/sa/: qmlkonsole.po
po/sk/: qmlkonsole.po
po/sl/: qmlkonsole.po
po/sv/: qmlkonsole.po
po/ta/: qmlkonsole.po
po/tr/: qmlkonsole.po
po/ug/: qmlkonsole.po
po/uk/: qmlkonsole.po
po/x-test/: qmlkonsole.po
po/zh_CN/: qmlkonsole.po
po/zh_TW/: qmlkonsole.po
src/: CMakeLists.txt  Messages.sh  QuickActionSettings.qml  TerminalModifierButton.qml  abouttype.cpp  abouttype.h  fontlistmodel.cpp  fontlistmodel.h  main.cpp  quickactionmodel.cpp  quickactionmodel.h  resources.qrc  savedcommandsmodel.cpp  savedcommandsmodel.h  settings.cpp  settings.h  shellcommand.cpp  shellcommand.h  terminalsettings.kcfg  terminalsettings.kcfgc  terminalsettings.kcfgc.license  terminaltabmodel.cpp  terminaltabmodel.h  util.cpp  util.h
src/contents/ui/: AboutPage.qml  PopupDialog.qml  QuickActionSettings.qml  SavedCommandsDialog.qml  SavedCommandsSettings.qml  SettingsComponent.qml  SettingsDialog.qml  SettingsPage.qml  Tabs.qml  TerminalKeyButton.qml  TerminalKeyToolBar.qml  TerminalPage.qml  main.qml
